--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.12"
 requests = "^2.32.3"
 python-dotenv = "^1.0.1"
+types-requests = "^2.32.0.20240622"
 
 [tool.poetry.group.lint.dependencies]
 flake8 = "^7.1.0"
