--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ python = "^3.12"
 requests = "^2.32.3"
 python-dotenv = "^1.0.1"
 types-requests = "^2.32.0.20240622"
+pandas = "^2.2.2"
+xlrd = "^2.0.1"
+numpy = "^2.0.0"
 
 [tool.poetry.group.lint.dependencies]
 flake8 = "^7.1.0"
