--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pandas = "^2.2.2"
 xlrd = "^2.0.1"
 numpy = "^2.0.0"
 openpyxl = "^3.1.5"
+pandas-stubs = "^2.2.2.240603"
 
 [tool.poetry.group.lint.dependencies]
 flake8 = "^7.1.0"
